--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                                         <div class="column__title title">
                                             <p>Friendly Code</p>
                                         </div>
-                                        <div class="column__text" id="5">
+                                        <div class="column__text" >
                                             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sequi asperiores consectetur quos vitae obcaecati ducimus ad ab qui cum, magni atque architecto commodi tempore fugiat saepe. Labore facere sequi libero!</p>
                                         </div>
                                     </div>
